syntax = "proto3";

package yuhaiin.protos.statistic.service;

option go_package = "github.com/Asutorufa/yuhaiin/pkg/protos/statistic/service";

import "google/protobuf/empty.proto";
import "statistic/config.proto";

service connections {
  rpc conns(google.protobuf.Empty) returns (notify_new_connections);
  rpc close_conn(notify_remove_connections) returns (google.protobuf.Empty);
  rpc total(google.protobuf.Empty) returns (total_flow);
  rpc notify(google.protobuf.Empty) returns (stream notify_data);
}

message total_flow {
  uint64 download = 1 [ json_name = "download" ];
  uint64 upload = 2 [ json_name = "upload" ];
}

message notify_data {
  oneof data {
    total_flow total_flow = 3;
    notify_new_connections notify_new_connections = 1;
    notify_remove_connections notify_remove_connections = 2;
  }
}

message notify_new_connections {
  repeated yuhaiin.statistic.connection connections = 1
      [ json_name = "connections" ];
}

message notify_remove_connections {
  repeated uint64 ids = 1 [ json_name = "ids" ];
}