syntax = "proto3";

package yuhaiin.tools;

option go_package = "github.com/Asutorufa/yuhaiin/pkg/protos/tools";

import "google/protobuf/empty.proto";

service tools {
  rpc get_interface(google.protobuf.Empty) returns (Interfaces);
}

message Interfaces {
  repeated Interface interfaces = 1 [ json_name = "interfaces" ];
}

message Interface {
  string name = 1 [ json_name = "name" ];
  repeated string addresses = 2 [ json_name = "addresses" ];
}